Fix html body gaps

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,15 +1,16 @@
 html {
-  padding: 1em;
+  padding: 0;
+  height:100%;
 }
 
 html, body {
   margin: 0;
-  height:100%;
 }
 
 body {
+  padding: 1em;
   background-attachment: fixed;
   background-image: url('/i/bg.jpg');
   background-size: cover;
-  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
